--- a/004_articles_and_materials/0906_evaluation_metrics.ipynb
+++ b/004_articles_and_materials/0906_evaluation_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b4b5718",
+   "id": "3a290869",
    "metadata": {},
    "source": [
     "Exploration SO3의 첫번째 노드를 공부했다.\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18c7f932",
+   "id": "78028a5a",
    "metadata": {},
    "source": [
     "목차\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "631bc427",
+   "id": "26da1e69",
    "metadata": {},
    "source": [
     "# 1. Binary Metrics"
@@ -68,7 +68,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ac5a2fa0",
+   "id": "40622897",
    "metadata": {},
    "source": [
     "먼저 낮에 찾은 위키피디아 그림자료이다.\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3ad832",
+   "id": "fba48fd3",
    "metadata": {},
    "source": [
     "## 1.1. confusion matrix"
@@ -93,7 +93,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b4d3a3ae",
+   "id": "98c746b6",
    "metadata": {},
    "source": [
     "confusion matrix를 적을 때, 가로축과 세로축 중 어떤 걸 predicted class로 놓고, 어떤 걸 actual class로 놓을 지 하는 건 늘 고민이다.\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "051da0d6",
+   "id": "08e31138",
    "metadata": {},
    "source": [
     "confusion matrix와 metrics라는 주제는 비단 머신러닝에 한정하여 말하게 되는 주제는 아니다.\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bbf1daf",
+   "id": "0fa18057",
    "metadata": {},
    "source": [
     ">**Q15. 오차 행렬에서는 예측 결과를 네 가지로 구분합니다. 각각은 무엇인가요?**\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33209403",
+   "id": "c37d6758",
    "metadata": {},
    "source": [
     "이 주제에 관해서는 지금까지 한 3-4번째 공부하는 것 같은데, 매번 배울때마다 헷갈렸다. 이제는 헷갈리지 않을 때가 되었다.\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82695660",
+   "id": "0febaec2",
    "metadata": {},
    "source": [
     "## 1.2. accuracy"
@@ -179,7 +179,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e6997f92",
+   "id": "40398d90",
    "metadata": {},
    "source": [
     "![0906_precision_and_recall_LMS_accuracy.png](attachment:0906_precision_and_recall_LMS_accuracy.png)\n",
@@ -197,7 +197,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "68f5764a",
+   "id": "7d7a35cd",
    "metadata": {},
    "source": [
     "이러한 accuracy가 제 역할을 하지 못하는 경우는 다음의 예이다.\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8a48ec7",
+   "id": "80257414",
    "metadata": {},
    "source": [
     "## 1.3. precision"
@@ -231,7 +231,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5c9ece1c",
+   "id": "c8ea5d1e",
    "metadata": {},
    "source": [
     "recall과 precision 중 precision을 먼저 놓는 이유는, 원 출처인 [이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 글의 순서가 그렇기 때문이기도 하지만, 조금 다른 이유가 있다.\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88b8ab29",
+   "id": "5d989ecb",
    "metadata": {},
    "source": [
     "## 1.4. recall"
@@ -287,7 +287,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4ef3ed07",
+   "id": "587055b8",
    "metadata": {},
    "source": [
     "recall은 precision과 반대이다.\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc685e07",
+   "id": "c2557aa3",
    "metadata": {},
    "source": [
     "위의 예시들을 통해서 보면, (아무리 preference라는 게 없다고 하더라도) 직관적으로 precision과 recall은 다음과 같은 의미라고 생각하면 될 것 같다.\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1966fb0f",
+   "id": "e0e8e3b7",
    "metadata": {},
    "source": [
     "## 1.5. F1 score"
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d919e893",
+   "id": "bae34445",
    "metadata": {},
    "source": [
     "F1 score를 이야기할 때 흔히 이야기하는 것은 precision과 recall 모두를 높게 만들기는 어려우니 일종의 trade-off를 할 수밖에 없다는 것이다.\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84dd49d2",
+   "id": "2fe4aadb",
    "metadata": {},
    "source": [
     "precision과 recall이 서로 배타적인 관계에 있다는 점을 차치하고라도, F1score는 다른 점에서 중요하다.\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa286873",
+   "id": "c4526971",
    "metadata": {},
    "source": [
     "즉, 두 값의 산술평균과 조화평균을 고려할 때, 조화평균이 조금 더 작다.\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6712b6",
+   "id": "cb9eb423",
    "metadata": {},
    "source": [
     "## 1.6. metric 선택하기"
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25841c1e",
+   "id": "d959bd74",
    "metadata": {},
    "source": [
     "[이 글](https://koopingshung.com/blog/machine-learning-model-selection-accuracy-precision-recall-f1/amp/)의 마지막에는 어떤 metric을 선택해야 할 지에 대해 나름대로 체계적으로 설명하고 있다.\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85740293",
+   "id": "91f23c8c",
    "metadata": {},
    "source": [
     "이번 첫번째 프로젝트에서 metric을 선택해야 하는 세 개의 dataset은 다음과 같다.\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6524a171",
+   "id": "29469490",
    "metadata": {},
    "source": [
     "위의 두 예시를 추가하여, 아까 정리해두었던 것을 다시 써보면 다음과 같다. (파란 색으로 표시했다. 유방암의 경우, 기존의 전염병의 예와 유사하지만 그냥 적었다.)\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256a9fc1",
+   "id": "2fd59a0e",
    "metadata": {},
    "source": [
     "# 2. Multiclass Metrics"
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0abc07",
+   "id": "e39de1fc",
    "metadata": {},
    "source": [
     "binary classification이 아니라 multiclass classification으로 가면, 상황이 조금 복잡해진다.\n",
@@ -550,8 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "666c8ffb",
+   "execution_count": 1,
+   "id": "2dd375dc",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a462569",
+   "id": "c6df374b",
    "metadata": {},
    "source": [
     "이때 target은 두 개가 아니라 세 개이다.\n",
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d35ec100",
+   "id": "149c6639",
    "metadata": {},
    "source": [
     "지금 글을 쓸 때 한가지 문제는, 아까와는 가로 세로가 반대로 바뀐다는 점이다.\n",
@@ -626,7 +626,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "57c9d3bd",
+   "id": "eab9be31",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c51bef4e",
+   "id": "43847096",
    "metadata": {},
    "source": [
     "이 그림이다.\n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c6f307",
+   "id": "05bf2228",
    "metadata": {},
    "source": [
     "## 2.1. accuracy"
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a760a78",
+   "id": "b55f7967",
    "metadata": {},
    "source": [
     "accuracy는 이진분류에서 사용했지만, 다중분류에서도 당연히 사용할 수 있다.\n",
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d356e3",
+   "id": "0927647f",
    "metadata": {},
    "source": [
     "## 2.2. macro metrics"
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa7feb4b",
+   "id": "24641003",
    "metadata": {},
    "source": [
     "지금 multiclass classification을 다루고 있기는 하지만, binary classification에서 썼던 metric들을 가져와서 생각해볼 수도 있다.\n",
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f850bac",
+   "id": "18647a76",
    "metadata": {},
    "source": [
     "\\begin{align*}\n",
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c01abdf8",
+   "id": "0d680ffd",
    "metadata": {},
    "source": [
     "## 2.3. weighted metrics"
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87ed8bff",
+   "id": "64b85a59",
    "metadata": {},
    "source": [
     "위에서 macro metric들을 정의할 때에, 각 class별 metric에 평균을 취하였다.\n",
@@ -794,7 +794,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "04e63476",
+   "id": "2980c6ac",
    "metadata": {},
    "source": [
     "![image-2.png](attachment:image-2.png)\n",
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d54830",
+   "id": "6d2067d6",
    "metadata": {},
    "source": [
     "\\begin{align*}\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9a307f",
+   "id": "707e15b9",
    "metadata": {},
    "source": [
     "macro-precision은 macro-precision(cat), macro-precision(fish), macro-precision(hen)을 단순히 산술평균하여 계산했었다.\n",
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f0cb45",
+   "id": "d860d8d6",
    "metadata": {},
    "source": [
     "## 2.4. Cohen's kappa\n",
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bd885d",
+   "id": "a88b40d5",
    "metadata": {},
    "source": [
     "### 2.4.1. Cohen's kappa에 대한 대략적인 설명\n",
@@ -911,7 +911,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6786dc66",
+   "id": "e9857486",
    "metadata": {},
    "source": [
     "### 2.4.2. accuracy/precision - vaild/reliable - bias/variance - intra/inter reliability\n",
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8ba3fc",
+   "id": "2f0aa97c",
    "metadata": {},
    "source": [
     "이렇게 길게 여러 개념들에 대해서 이야기한 것은 Cohen's kappa의 식에 등장하는 값 chance agree $p_e$가 inter-rater reliability에 해당하는 값이라는 것을 말하기 위해서이다.\n",
@@ -968,7 +968,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4e22f68f",
+   "id": "662ecf2f",
    "metadata": {},
    "source": [
     "### 2.4.3. agreement($p_0$)와 chance agree ($p_e$)\n",
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2dad9d4",
+   "id": "1d4aea3d",
    "metadata": {},
    "source": [
     "### 2.4.4. Cohen's kappa의 계산\n",
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa7b097",
+   "id": "3b425bda",
    "metadata": {},
    "source": [
     "### 2.4.5. $p_e<p_0$일 조건에 대한 계산\n",
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f6cefcc",
+   "id": "a680fbab",
    "metadata": {},
    "source": [
     "산책을 다녀왔다.\n",
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d224765f",
+   "id": "8f3ff3c2",
    "metadata": {},
    "source": [
     "### 2.4.6. Cohen's kappa 요약\n",
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8c49f5",
+   "id": "dfb96a52",
    "metadata": {},
    "source": [
     "# 3. codes with `sklearn`"
@@ -1231,8 +1231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "17dfab28",
+   "execution_count": 2,
+   "id": "1a13ac64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1248,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "89b74ca1",
+   "id": "482f2f0a",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1256,8 +1256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f3127a47",
+   "execution_count": 3,
+   "id": "ad5c8f12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,8 +1271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "baf672b1",
+   "execution_count": 4,
+   "id": "d981f962",
    "metadata": {},
    "outputs": [
     {
@@ -1298,8 +1298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "913073dc",
+   "execution_count": 5,
+   "id": "dd83523f",
    "metadata": {},
    "outputs": [
     {
@@ -1310,20 +1310,19 @@
        "       [3, 0, 6]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cm = confusion_matrix(actual,predicted)\n",
-    "cm"
+    "confusion_matrix(actual,predicted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e197cee1",
+   "execution_count": 6,
+   "id": "e16b8944",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1331,7 @@
        "0.2545871559633026"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
