--- a/005_LMS_Exploration_SO3/2. 날씨 좋은 월요일 오후 세 시, 자전거 타는 사람은 몇 명?.ipynb
+++ b/005_LMS_Exploration_SO3/2. 날씨 좋은 월요일 오후 세 시, 자전거 타는 사람은 몇 명?.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b518be70",
+   "id": "bc11ad55",
    "metadata": {},
    "source": [
     "# 2. 날씨 좋은 월요일 오후 세 시, 자전거 타는 사람은 몇 명?"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b64c2942",
+   "id": "705b88df",
    "metadata": {},
    "source": [
     "## 2.1. 들어가며"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c46b24",
+   "id": "10c65fc2",
    "metadata": {},
    "source": [
     "이 노드의 목표는 \"**머신러닝의 본질을 관통하는 철학과, 그 과정\"을 깊게 파고들며 이해해 보는 것**임을 말씀드리고 싶습니다."
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f468e6db",
+   "id": "5315ea26",
    "metadata": {},
    "source": [
     "## 2.2. 단 하나의 정보, \"사용한 연수\"만 가지고 맥북의 중고가 맞춰보기 (1) 맥북의 중고가를 결정짓는 변수는 무엇일까? 데이터 확인하기"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "42274a4a",
+   "id": "e5583edc",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1a6a79d2",
+   "id": "8f723771",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cbfee530",
+   "id": "883d0c70",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "25213816",
+   "id": "8774260b",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "26a90a13",
+   "id": "32a46af8",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6872e94e",
+   "id": "2031fae0",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82e90a2",
+   "id": "791491eb",
    "metadata": {},
    "source": [
     "## 2.3. 단 하나의 정보, \"사용한 연수\"만 가지고 맥북의 중고가 맞춰보기 (2) \"모델\"을 만든다는 것, 그 의미 이해하기"
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c4dfd200",
+   "id": "ba10b899",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e88dca36",
+   "id": "ce48245b",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1783fb71",
+   "id": "7aff177f",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0604b14d",
+   "id": "59171f62",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "881147e4",
+   "id": "3be57eee",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "086bff84",
+   "id": "36ab3669",
    "metadata": {},
    "source": [
     "## 2.4. 단 하나의 정보, \"사용한 연수\"만 가지고 맥북의 중고가 맞춰보기 (3) 정확한 방정식이 아닌, \"최적의 방정식\"을 구하는 여정의 시작: 손실함수 정의하기"
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4fe7279a",
+   "id": "1df3e347",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b0ee052e",
+   "id": "d3ef5919",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "34566c3c",
+   "id": "24502d6c",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1827787b",
+   "id": "39367fac",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6893713b",
+   "id": "5838bd95",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b97cd653",
+   "id": "2ad1512b",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "039faf38",
+   "id": "247d07ae",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4501b609",
+   "id": "63ecf01c",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "852af6e1",
+   "id": "32b9f7ad",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "03eb0b2c",
+   "id": "7f2af5bd",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d04324",
+   "id": "5e202472",
    "metadata": {},
    "source": [
     "## 2.5. 단 하나의 정보, \"사용한 연수\"만 가지고 맥북의 중고가 맞춰보기 (4) 모델을 점점 똑똑하게 만드는 방법? 손실함수를 줄이면 되겠지!"
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "98989645",
+   "id": "5c852bec",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8385145e",
+   "id": "67436043",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1c31d6",
+   "id": "c022f304",
    "metadata": {},
    "source": [
     "## 2.6. 단 하나의 정보, \"사용한 연수\"만 가지고 맥북의 중고가 맞춰보기 (5) 한 번에 못해도 괜찮아, 한 단계 한 단계 학습해나가면 되니까!"
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "11d3c0d7",
+   "id": "4a2a5245",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "559aa9e9",
+   "id": "b741db45",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "18529e59",
+   "id": "fb761502",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4c53963d",
+   "id": "a523130d",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "eaa82ef1",
+   "id": "20dc6527",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "52b0f735",
+   "id": "27ee6538",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7dfc026c",
+   "id": "e6ff1414",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "71fef848",
+   "id": "0341e959",
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "16abffdd",
+   "id": "616ccc7a",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "04ab8d7f",
+   "id": "5d45eb32",
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "943be26d",
+   "id": "5989c30f",
    "metadata": {},
    "outputs": [
     {
@@ -1378,8 +1378,10 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5b0a717a",
-   "metadata": {},
+   "id": "015da3df",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1590,7 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d27c3169",
+   "id": "d3a42282",
    "metadata": {},
    "outputs": [
     {
@@ -1612,8 +1614,10 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f7036c41",
-   "metadata": {},
+   "id": "6eda16d9",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1648,7 +1652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01db7e5",
+   "id": "13948d40",
    "metadata": {},
    "source": [
     "## 2.7. 이번엔 하나가 아니다! 다양한 정보로 원하는 값을 예측해 보기 (1) 손님의 성별, 수, 전체 먹은 금액 등으로 내가 받을 팁을 예측할 수 있을까?"
@@ -1657,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c50ee732",
+   "id": "fdc15163",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "257e3924",
+   "id": "11a5e7a9",
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "40fecb0c",
+   "id": "6ff9dc6c",
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0cd906fd",
+   "id": "0d96dbdb",
    "metadata": {
     "scrolled": true
    },
@@ -2129,7 +2133,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ef6e5a42",
+   "id": "d6f747c3",
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6060b36",
+   "id": "e2ca478e",
    "metadata": {},
    "source": [
     "## 2.8. 이번엔 하나가 아니다! 다양한 정보로 원하는 값을 예측해 보기 (2) 다시 한 번 직접 설계해 보는 손실함수"
@@ -2155,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "adc90fd2",
+   "id": "bdbab473",
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1c91f399",
+   "id": "271fc1f7",
    "metadata": {},
    "outputs": [
     {
@@ -2217,7 +2221,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1ee0c576",
+   "id": "f8cdcdd5",
    "metadata": {},
    "outputs": [
     {
@@ -2251,7 +2255,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6aeb4993",
+   "id": "3027ea26",
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2278,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8b08eb9d",
+   "id": "465197b7",
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2299,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a17bf5f1",
+   "id": "2fe82c90",
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2323,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "e889b0b7",
+   "id": "7c2cb9dc",
    "metadata": {},
    "outputs": [
     {
@@ -2340,7 +2344,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9a844abf",
+   "id": "562afc1c",
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ebd3c73",
+   "id": "78e9d13a",
    "metadata": {},
    "source": [
     "## 2.9. 이번엔 하나가 아니다! 다양한 정보로 원하는 값을 예측해 보기 (3) 앞으로는 절대 해 볼 일 없을, 직접 그래디언트 계산하기"
@@ -2370,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6dbcb975",
+   "id": "ac6a1c1a",
    "metadata": {},
    "outputs": [
     {
@@ -2401,7 +2405,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "237639f9",
+   "id": "85625fce",
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2428,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a53b3a46",
+   "id": "635bda7d",
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "463fd8cb",
+   "id": "3f1fcc89",
    "metadata": {},
    "source": [
     "## 2.10. 이번엔 하나가 아니다! 다양한 정보로 원하는 값을 예측해 보기 (4) 모두 준비 되었다면, 모델 학습은 간단하다구"
@@ -2453,7 +2457,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "dd2b84a3",
+   "id": "d328ead2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2463,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0a4e106e",
+   "id": "f208c82a",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2593,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "429ab76d",
+   "id": "78402aa1",
    "metadata": {},
    "outputs": [
     {
@@ -2618,7 +2622,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b206ff2d",
+   "id": "74e19062",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2646,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "add6d0df",
+   "id": "27c892a0",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2669,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "781418c3",
+   "id": "eaaee500",
    "metadata": {},
    "outputs": [
     {
@@ -2693,7 +2697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d40a29e",
+   "id": "54400035",
    "metadata": {},
    "source": [
     "## 2.11. 이번엔 하나가 아니다! 다양한 정보로 원하는 값을 예측해 보기 (5) 지금까지 한 모든 과정을, 라이브러리로 깔끔하게"
@@ -2702,7 +2706,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4404abfd",
+   "id": "641919eb",
    "metadata": {},
    "outputs": [
     {
@@ -2724,7 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2872320e",
+   "id": "221e9a99",
    "metadata": {},
    "outputs": [
     {
@@ -2745,7 +2749,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6859332f",
+   "id": "98cfe6fc",
    "metadata": {},
    "outputs": [
     {
@@ -2764,7 +2768,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3fec95a2",
+   "id": "25502bd2",
    "metadata": {},
    "outputs": [
     {
@@ -2785,7 +2789,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9aae9d78",
+   "id": "e0a4f7bf",
    "metadata": {
     "scrolled": true
    },
@@ -2808,7 +2812,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "71e312ad",
+   "id": "3a0fe343",
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "586b1592",
+   "id": "4a0e7f10",
    "metadata": {},
    "outputs": [
     {
@@ -2863,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b47e974c",
+   "id": "ffe72f54",
    "metadata": {},
    "outputs": [
     {
@@ -2893,14 +2897,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab02757d",
+   "id": "07bd2b6b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5c7b3cd9",
+   "id": "abf8de7e",
    "metadata": {},
    "source": [
     "## 2.12. 프로젝트 1 : 손수 설계하는 선형회귀, 당뇨병 수치를 맞춰보자!"
@@ -2908,7 +2912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf46bc3",
+   "id": "363d9783",
    "metadata": {},
    "source": [
     "## 2.13. 프로젝트 2 : 날씨 좋은 월요일 오후 세 시, 자전거 타는 사람은 몇 명?"
