0915_15_1514_commit for no reason

--- a/005_LMS_Exploration_SO3/2. (revisited) multivariate_linear_model - sklearn.ipynb
+++ b/005_LMS_Exploration_SO3/2. (revisited) multivariate_linear_model - sklearn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "28fd241e",
+   "id": "ac24bd30",
    "metadata": {},
    "source": [
     "## 2.11. 이번엔 하나가 아니다! 다양한 정보로 원하는 값을 예측해 보기 (5) 지금까지 한 모든 과정을, 라이브러리로 깔끔하게"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "78f9b355",
+   "id": "8080250e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f2f14e76",
+   "id": "0e9f2bb3",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "baff5e0d",
+   "id": "ab15001d",
    "metadata": {},
    "outputs": [
     {
@@ -310,32 +310,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cddc4e76",
+   "execution_count": 4,
+   "id": "ad080365",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(244, 12)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "(244, 12)\n",
+      "(244,)\n"
+     ]
     }
    ],
    "source": [
     "X = tips[['total_bill', 'size', 'sex_Male', 'sex_Female', 'smoker_Yes', 'smoker_No',\n",
     "          'day_Thur', 'day_Fri', 'day_Sat', 'day_Sun', 'time_Lunch', 'time_Dinner']].values\n",
     "y = tips['tip'].values\n",
-    "X.shape"
+    "print(type(X))\n",
+    "print(type(y))\n",
+    "print(X.shape)\n",
+    "print(y.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8016574d",
+   "id": "c20cebcd",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +357,39 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47eddfdc",
+   "id": "385e6fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(195, 12)\n",
+      "<class 'numpy.ndarray'>\n",
+      "(49, 12)\n",
+      "<class 'numpy.ndarray'>\n",
+      "(195,)\n",
+      "<class 'numpy.ndarray'>\n",
+      "(49,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(X_train))\n",
+    "print(X_train.shape)\n",
+    "print(type(X_test))\n",
+    "print(X_test.shape)\n",
+    "print(type(y_train))\n",
+    "print(y_train.shape)\n",
+    "print(type(y_test))\n",
+    "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1c370e02",
    "metadata": {},
    "outputs": [
     {
@@ -372,8 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "075ec295",
+   "execution_count": 8,
+   "id": "67d4f52b",
    "metadata": {
     "scrolled": true
    },
@@ -384,7 +419,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,8 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "83e9d3bd",
+   "execution_count": 9,
+   "id": "4bbd689f",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +449,7 @@
        "       0.87348926, 1.81911521, 3.04083954, 1.85436902])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "38a3fa82",
+   "execution_count": 10,
+   "id": "6d6e9714",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +471,7 @@
        "0.7033566017436103"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,8 +485,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2fbbcb0d",
+   "execution_count": 11,
+   "id": "39c57070",
    "metadata": {},
    "outputs": [
     {
